# rag

./: .gitignore  README.md  __init__.py  api.py  config.py  filters.py  pyproject.toml
chunker/: base.py
cli/: ingest.py  query.py
docs/: API.md
embedder/: base.py  ollama.py
env/: env-rag.yml
llm/: __init__.py  base.py  openrouter.py
rag/: __init__.py  api.py  config.py  filters.py  sync.py  tools.py  types.py
rag/chunker/: __init__.py  token.py
rag/cli/: ingest.py  query.py
rag/embedder/: __init__.py  ollama.py
rag/llm/: __init__.py  ollama.py  openrouter.py
rag/retriever/: __init__.py  vector.py
rag/store/: __init__.py  chroma_store.py  json_store.py
rag/tagger/: __init__.py  base.py  llm_tagger.py
rag/utils/: paths.py
retriever/: base.py
store/: base.py  chroma_store.py  document_store.py
utils/: __init__.py
